=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.21_01-dev

add  /D "_MSWSOCK_" to ApacheModulePerl.dsp
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

removed modules/sandwich test

Apache::RegistryBB returns DECLINED instead of FORBIDDEN if -d $r->finfo
[Sean Chittenden <sean.chittenden@auctia.com>]

add Apache::Util::validate_password(), as suggested by Christophe
Labouisse

call (void)perl_request_rec(r) asap, instead of waiting till the
response phase, e.g. so CGI.pm can be used before PerlHandler, without 
having to call Apache->request($r);

Apache::perl_hook() fixes for Perl*Api, thanks to Geoffrey Young for
the spot

save/restore $^W in Apache::PerlRun
[Honza Pazdziora <adelton@informatics.muni.cz>]

fix Apache::Registry when $r->uri ends with a /
[Peter Deister <deister@opus5.de>]

add virtualhost support to Apache::RegistryLoader
[John Hughes <john@Calva.COM>]

$Apache::Registry::NameWithVirtualHost fix
[John Hughes <john@Calva.COM>]

allow Apache::PerlRun::handler to be subclassed
[Yasushi Nakajima <sey@jkc.co.jp>]

fix $r->connection->remote_ip for SGI performance patches (#ifdef SGI_BOOST)
[Artem Veremey <scimitar@mail.ru>]

mod_perl.exp is now installed

aix tweaks for building with apxs
[Jens-Uwe Mager <jum@helios.de>]

pod fixups to avoid WARNING from newer pod2*

Apache::RedirectLogFix now uses $r->last
[David D. Kilzer <ddkilzer@e-markets.com>]

tweaks for sfio
[Lupe Christoph <lupe@lupe-christoph.de>]

update Apache::SIG docs, thanks to Bill Moseley for the spot

fix get_set_PVp in mod_perl_xs.h
[Michal Jaegermann <michal@ellpspace.math.ualberta.ca>]

tweaks to compile/run with 5.5.670 + -Dusethreads

$r->hostname now documented [Eric Cholet <cholet@logilune.com>]

Apache::File methods are now documented 
[Eric Cholet <cholet@logilune.com>]

avoid quoting <Perl> config if args_how == RAW_ARGS
thanks to Michael Schout for the spot
