@@ -6,9 +6,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 - recursion triggered by internal_redirect() called by a pushed handler
 [Ashish Goyal <ashishg@linux-delhi.org>]
 
-- dso fixes
-[Daniel Jacobowitz <drow@false.org>, Alan Burlison <Alan.Burlison@uk.sun.com>]
-
 - Support of <CR> <LF> in a EBCDIC environment
 [Ignasi Roca <ignasi.roca@fujitsu.siemens.es>]
 
@@ -26,9 +23,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - PERL_STATIC_EXTS doesnt work with USE_APACI=1
 
-- PerlRun::flush_namespace needs to check if_owner for all types, not
-just cvs [John M Vinopal <jvinopal@abattoir.com>]
-
 - solaris Perl Configure adds a space before -R in ccdlflags, see
   about removing that
   [Ken McNamara <conmara@oaktree.net>]
@@ -39,8 +33,6 @@ just cvs [John M Vinopal <jvinopal@abattoir.com>]
 - see if possible to have the dso libperl.so be named something else,
   e.g. libmodperl.so 
   [Eugene B. Byrganov <E.B.Byrganov@inp.nsk.su]
-
-- should $r->content unset $r->headers_in('content-length') ?
 
 - update url to Randy Kobes' win32 binary
 
@@ -68,6 +60,15 @@ just cvs [John M Vinopal <jvinopal@abattoir.com>]
 
 - coderef to $r->custom_response
 [Randal L. Schwartz <merlyn@stonehenge.com>]
+
+- PerlRun::flush_namespace needs to check if_owner for all types, not
+just cvs.  NOTE: i dont think this is possible, only CVs have a GV
+pointer attached -dougm
+[John M Vinopal <jvinopal@abattoir.com>]
+
+- should $r->content unset $r->headers_in('content-length') ?
+NOTE: im worried this could break apps who need to know content-length 
+after data has been read
 
 ---------------------------------------------------------------------------
 KNOWN BUGS
